--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@react-three/drei": "^9.107.0",
 		"@react-three/fiber": "^8.16.8",
 		"@react-three/postprocessing": "^2.16.2",
+		"@vercel/speed-insights": "^1.0.12",
 		"autoprefixer": "^10.4.19",
 		"framer-motion": "^11.2.12",
 		"maath": "^0.10.7",
